sandbox/output
Hiker.java:32: error: unreported exception Exception; must be caught or declared to be thrown
            throw new Exception(negatives);
            ^
1 error
